<resources>

    <string name="app_name">CAROL</string>

    <string name="title_login_page">Sudah siap untuk mendeteksi mulut anda?</string>
    <string name="message_login_page">Masukkan datamu dahuluya</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Masuk</string>
    <string name="login_image_description">Login Image</string>

    <string name="result">Hasil</string>
    <string name="disease_label">Penyakit : </string>
    <string name="disease">Disease</string>
    <string name="result_image">Result Image</string>
    <string name="description_label">Deskripsi : </string>
    <string name="description">Description</string>
    <string name="treatment_label">Penanganan : </string>
    <string name="treatment">Treatment</string>

    <string name="title_signup_page">Lengkapi data dirimu</string>
    <string name="name">Nama</string>
    <string name="signup">Daftar</string>
    <string name="register_image_description">Register Image</string>

    <string name="welcome_image_description">Welcome Image</string>
    <string name="title_welcome_page">Selamat datang di Carol!</string>
    <string name="message_welcome_page">Mau deteksi penyakit mulut dan dapatkan penanganan yang tepat? Gunakan Carol, solusi pintar untuk kesehatan mulut Anda!</string>

    <string name="dashboard">Dashboard</string>
    <string name="dashboard_text">Carol siap membantumu dalam mengetahui kondisi dan menjaga kesehatan mulutmu</string>

    <string name="date">Date</string>
    <string name="deteksi">Deteksi</string>
    <string name="deteksi_image_description">Deteksi Foto</string>
    <string name="use_camera">Buka Kamera</string>
    <string name="choose_image">Pilih Foto</string>
    <string name="lets_analyze">Mulai Analisa</string>
    <string name="close">Close</string>

    <string name="profile">Profile</string>
    <string name="profile_image_description">Profile Image</string>
    <string name="personal_information">Personal Information</string>
    <string name="full_name">Full Name</string>
    <string name="email_profile">E-Mail</string>
    <string name="log_out">Logout</string>

    <string name="date_time">Date / Time</string>
    <string name="history_image_description">History Image</string>
    <string name="disease_name">Disease</string>
    <string name="description_dashboard">Description</string>
    <string name="perlakuan">Perlakuan : </string>
    <string name="treatment_dashboard">Treatment</string>

    <string name="history">Histori</string>
</resources>